--- a/Computer-Vision-Model-Sample/Computer-Vision-Model-Sample.csproj
+++ b/Computer-Vision-Model-Sample/Computer-Vision-Model-Sample.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Computer_Vision_Model_Sample</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
